testcases/bad/templates/namespaced-filters-community-misspelled-ns2.j2
{{ hash_files|zip(query("file","hash_files"))|community.generalx.dict }}
